(executables
 (names utop)
 (libraries utop)
 (flags :standard -safe-string)
 (modes byte_complete)
 (link_flags -linkall))

(rule
 (targets utop-expunged.bc.exe)
 (deps utop.bc.exe)
 (action
  (run %{exe:expunge/expunge.exe} %{bin:ocamlobjinfo} %{ocaml_where} %{deps}
    %{targets} %{lib:compiler-libs.common:ocamlcommon.cma}
    %{lib:compiler-libs.bytecomp:ocamlbytecomp.cma}
    %{lib:compiler-libs.toplevel:ocamltoplevel.cma})))

(install
 (section bin)
 (files
  (utop-expunged.bc.exe as utop)
  (utop.bc.exe as utop-full)))
